tests/syntax_error/zig_array_type.jou
def blah() -> None:
    foo: [100]byte  # Error: a type cannot start with '[', use e.g. int[10] instead of [10]int for arrays
